fix : fixed tag 15 add ret

--- a/templates/index.html
+++ b/templates/index.html
@@ -455,6 +455,7 @@
             }
             if($('#check_tag').is(':checked') && num_of_pages > 4){
                 alert('태그 검색의 분석 상품 갯수는 최대 15개 입니다. \n분석 상품 갯수를 15개 이하로 설정해주세요.')
+                return
             }
             if (search_name == "") {
                 alert('먼저 검색어를 입력해주세요')
