fix : fix wrong spell

--- a/templates/index.html
+++ b/templates/index.html
@@ -459,7 +459,7 @@
                     return
                 } else if(num_of_pages === 0){
                     $('.loading_msg_tag').text = '태그 검색으로 인해 약 2분정도 소요됩니다.'
-                } else if(num === 4){
+                } else if(num_of_pages === 4){
                     $('.loading_msg_tag').text = '태그 검색으로 인해 약 5분정도 소요됩니다.'
                 }
             } else{
