--- a/templates/index.html
+++ b/templates/index.html
@@ -454,12 +454,15 @@
                     break
             }
             if($('#check_tag').is(':checked')){
-                if(num_of_pages > 4){
-                    alert('태그 검색의 분석 상품 갯수는 최대 15개 입니다. \n분석 상품 갯수를 15개 이하로 설정해주세요.')
-                    return
-                } else if(num_of_pages === 0){
+                if(num_of_pages === 0){
                     $('.loading_msg_tag').text = '태그 검색으로 인해 약 2분정도 소요됩니다.'
                 } else if(num_of_pages === 4){
+                    $('.loading_msg_tag').text = '태그 검색으로 인해 약 5분정도 소요됩니다.'
+                } else if(num_of_pages === 10){
+                    $('.loading_msg_tag').text = '태그 검색으로 인해 약 5분정도 소요됩니다.'
+                } else if(num_of_pages === 13){
+                    $('.loading_msg_tag').text = '태그 검색으로 인해 약 5분정도 소요됩니다.'
+                } else {
                     $('.loading_msg_tag').text = '태그 검색으로 인해 약 5분정도 소요됩니다.'
                 }
             } else{
