fix : fixed loadingbar bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -278,6 +278,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             margin-top: 80px;
             font-weight: 700;
             font-size: 1.5em;
@@ -975,7 +976,7 @@
     <div class="wrap-loading display-none">
         <div><img src="{{url_for('static', filename='loading1.gif')}}" style="width:50px" />
         </div>
-        <span class="loading_msg"> 로딩중입니다.<br> 이 페이지를 끄지 마십시오.<br><span class="loading_msg_tag"></span>
+        <span class="loading_msg"> 로딩중입니다.<br> 이 페이지를 끄지 마십시오.<span class="loading_msg_tag"></span>
     </span>
     </div>
 </body>
