fix : loading text bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -467,7 +467,7 @@
                     $('.loading_msg_tag').text('태그 검색으로 인해 약 10분정도 소요됩니다.')
                 }
             } else{
-                $('.loading_msg_tag').text = ''
+                $('.loading_msg_tag').text('')
             }
             if (search_name == "") {
                 alert('먼저 검색어를 입력해주세요')
