--- a/templates/index.html
+++ b/templates/index.html
@@ -255,6 +255,11 @@
             right: -78%;
         } */
 
+        .close{
+            background-color: transparent;
+            border: 0px;
+        }
+
         .info_search {
             color: rgb(87, 87, 87);
         }
@@ -534,7 +539,9 @@
                             checkTextAreaByte()
                         }
 
-                        else $('#myModal').modal('toggle')
+                        else {
+                            $('#myModal').modal('toggle')
+                        }
                     }
                 })
             }
@@ -951,7 +958,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">정보를 가져올 수 없습니다.</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -959,7 +966,7 @@
                     <p>예상치 못한 문제로 인해 정보를 가져올 수 없습니다.</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">확인</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
                 </div>
             </div>
         </div>
